<resources>
    <string name="app_name">Exercise6</string>
    <string name="action_settings">Settings</string>
    <string name="_7_mins">7 mins</string>
    <string name="artamon_platform_3">Artamon Platfrom 3</string>
    <string name="on_time">On Time</string>
    <string name="_15_01">15:01</string>
    <string name="ahfield">Ashfield</string>
    <string name="action_delete">Delete All</string>
    <string name="action_refresh">Refres</string>
    <string name="action_quit">Quit</string>
    <string name="late">Late</string>
    <string name="refresh">Refresh</string>
    <string name="platform">Platform</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="destination">Destination</string>
    <string name="destination_time">Destination Time</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="added">Data added Successfully</string>
</resources>
