<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Main2Activity"
    android:padding="15sp">
    <EditText
        android:id="@+id/platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/platform"
        android:inputType="text" />
    <EditText
        android:id="@+id/arrival_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/arrival_time"
        android:inputType="number"/>

    <Spinner
        android:id="@+id/on_time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/on_time_and_late" />
    <EditText
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination"
        android:inputType="text" />

    <EditText
        android:id="@+id/destination_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_time"
        android:inputType="text" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:text="@string/add"
            android:layout_alignParentLeft="true"
            android:onClick="addButtonHandler"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/add"
            android:text="@string/cancel"
            android:layout_alignParentRight="true"
            android:onClick="cancelButtonHandler"/>
    </RelativeLayout>

</LinearLayout>