<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="80dp">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:background="#6a9d38"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10sp"
        android:paddingStart="20sp">


        <TextView
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/_7_mins"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_bar_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="230sp"
        android:layout_height="70sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/first"
        android:orientation="vertical"
        android:layout_toLeftOf="@id/first"
        android:layout_toRightOf="@id/third"
        android:paddingLeft="10dp"
        android:paddingStart="15dp"
        android:paddingTop="4sp">

        <TextView
            android:id="@+id/platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artamon_platform_3" />

        <TextView
            android:id="@+id/arrival_time_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="14:14"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_time"
            android:textColor="#6a9d38"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_width="84sp"
        android:layout_height="70sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/second"
        android:layout_toRightOf="@+id/second"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:paddingLeft="15sp"
        android:paddingStart="15sp"
        android:paddingTop="10sp"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/destination_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15_01"
            android:textColor="@color/idk" />

        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ahfield"
            android:textColor="@color/whocares" />
    </LinearLayout>

</RelativeLayout>